# virus_propagation

./: .gitignore  CMakeLists.txt  main.cpp
graph_manipulation/: CMakeLists.txt  graph_data_structures.cpp
graph_manipulation/graph_manip/: graph_data_structures.hpp
matlabtest/: README.txt  adJ2mat.m  calc_sis.m  edge_to_adjacency_list.m  edge_to_adjacency_matrix.m  eigen_vector_immunize.m  higest_degree_immunization.m  iterative_highest_degree_immunization.m  matlab.mat  p4_1.m  random_immunize.m  read_edge_list.m  simulate_sim.m
